fixed bug where song pictures were not showing up when next song plays

--- a/app/assets/stylesheets/components/music_player.scss
+++ b/app/assets/stylesheets/components/music_player.scss
@@ -92,7 +92,7 @@ $height: 30px;
 
 @keyframes moveUp {
   0% {
-    height: 0px;
+    height: 5px;
   }
 
   100% {
